# NMEA2000-DISPLAY-on-ESP32S3

./: README.md
.github/: FUNDING.yml
Freecad/: Base.3mf  Base.step  Base.stl  Bottom.3mf  Bottom.step  Bottom.stl  ButtonPusher.3mf  ButtonPusher.step  ButtonPusher.stl  ButtonPushers.3mf  ButtonPushers.step  ButtonPushers.stl  Enclosure.stl  MainBody.3mf  MainBody.step  MainBody.stl
NMEA2000-DISPLAY-on-ESP32S3/.github/: FUNDING.yml
Squareline Studio/: NMEA2000SailInstrument.sll  NMEA2000SailInstrument.slp  NMEA2000SailInstrument.spj  NMEA2000SailInstrument_events.py  project.info
Squareline Studio/UI files/: CMakeLists.txt  filelist.txt  ui.c  ui_ScrAppWind.c  ui_ScrAppWind.h  ui_ScrAutopilot.c  ui_ScrAutopilot.h  ui_ScrInfo.c  ui_ScrInfo.h  ui_ScrNav.c  ui_ScrTruWind.c  ui_ScrWind.c  ui_ScrXTE.c  ui_ScrXTE.h  ui_SettingsScr.c  ui_SettingsScr.h  ui_comp_hook.c  ui_font_HandWriting.c  ui_helpers.h  ui_img_1883567225.c  ui_img_boat_png.c  ui_img_brightness_png.c  ui_img_circcaleclosehaul_png.c  ui_img_circularscale_png.c  ui_img_compass2_png.c  ui_img_contour_png.c  ui_img_error_png.c  ui_img_helmman_png.c  ui_img_indicator_png.c  ui_img_ok_png.c  ui_img_splash_png.c  ui_img_turn_port_png.c  ui_img_warning_png.c  ui_img_windcontour_png.c
Squareline Studio/assets/: Circular.xcf  Compass.xcf  Contour.xcf  Screenshot (4).xcf  Sea.xcf  Warning.xcf  Zoom.xcf  brightness.xcf  circularscale.xcf  circularscaleCloseHaul.xcf  drawing.xcf  needle3.xcf  ui_font_Arial60.c  ui_font_Arial60.fcfg  ui_font_Arial90.c  ui_font_Arial90.fcfg  (+3 more)
images/: preview.html
(+58 files in other folders)
