SET(SOURCES ui_SplashScr.c
    ui_ScrWind.c
    ui_ScrAutopilot.c
    ui_ScrXTE.c
    ui_ScrNav.c
    ui_ScrAppWind.c
    ui_ScrTruWind.c
    ui_ScrInfo.c
    ui_SettingsScr.c
    ui_DialogScr.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_manager.c
    ui_img_splash_png.c
    ui_img_contour_png.c
    ui_img_compass2_png.c
    ui_img_appwind_png.c
    ui_img_truewind_png.c
    ui_img_circularscale_png.c
    ui_img_indicator_png.c
    ui_img_helmman_png.c
    ui_img_boat_png.c
    ui_img_1883567225.c
    ui_img_zoomin_png.c
    ui_img_windcontour_png.c
    ui_img_circcaleclosehaul_png.c
    ui_img_needle_png.c
    ui_img_warning_png.c
    ui_img_settings_png.c
    ui_img_ok_png.c
    ui_img_cancel_png.c
    ui_img_turn_starboard_png.c
    ui_img_brightness_png.c
    ui_img_error_png.c
    ui_img_error2_png.c
    ui_img_zoomout_png.c
    ui_img_turn_port_png.c
    fonts/ui_font_Arial60.c
    fonts/ui_font_Arial90.c
    fonts/ui_font_HandWriting.c
    fonts/ui_font_HandWriting24.c)

add_library(ui ${SOURCES})
